--- a/init.g2.rc
+++ b/init.g2.rc
@@ -40,6 +40,10 @@ on init
     mkdir /sns 0775 system system
     mkdir /sns/cal 0771 system system
 
+on charger-fs
+    mount ext4 /dev/block/platform/msm_sdcc.1/by-name/system  /system ro barrier=1
+    start rmt_storage
+
 on fs
     mount_all ./fstab.g2
     write /sys/kernel/boot_adsp/boot 1
@@ -280,6 +284,7 @@ on post-fs-data
     restorecon /sys/devices/platform/kcal_ctrl.0/kcal_ctrl
 
 on charger
+    trigger charger-fs
     # Enable Power modes and set the CPU Freq Sampling rates
     write /sys/module/lpm_resources/enable_low_power/l2 2
     write /sys/module/lpm_resources/enable_low_power/pxo 1
@@ -296,7 +301,6 @@ on charger
     write /sys/devices/system/cpu/cpu1/online 0
     write /sys/devices/system/cpu/cpu2/online 0
     write /sys/devices/system/cpu/cpu3/online 0
-    start rmt_storage
 
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd
@@ -363,7 +367,7 @@ service charger /charger
 service sdcard /system/bin/sdcard /data/media /mnt/shell/emulated 1023 1023
     class late_start
 
-service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
+service mpdecision /system/bin/mpdecision --avg_comp
     class main
 
 service qcamerasvr /system/bin/mm-qcamera-daemon
@@ -446,7 +450,7 @@ service fuse_usb /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/usb /storage/u
 
 # Powersave
 on property:sys.perf.profile=0
-    start mpdecision
+    stop mpdecision
     #start thermal-engine
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor conservative
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor conservative
@@ -455,7 +459,7 @@ on property:sys.perf.profile=0
 
 # Balanced
 on property:sys.perf.profile=1
-    start mpdecision
+    stop mpdecision
     #start thermal-engine
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor ondemand
