--- a/init.g2.rc
+++ b/init.g2.rc
@@ -450,7 +450,7 @@ service fuse_usb /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/usb /storage/u
 
 # Powersave
 on property:sys.perf.profile=0
-    stop mpdecision
+    start mpdecision
     #start thermal-engine
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor conservative
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor conservative
@@ -459,7 +459,7 @@ on property:sys.perf.profile=0
 
 # Balanced
 on property:sys.perf.profile=1
-    stop mpdecision
+    start mpdecision
     #start thermal-engine
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor ondemand
